Upload Materi kal

--- a/_sources/Solusi perslinier.ipynb
+++ b/_sources/Solusi perslinier.ipynb
@@ -1,1 +1,191 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"provenance":[],"authorship_tag":"ABX9TyPHOUu1UaV5HdLiXaeDduEu"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"markdown","source":["# **Solusi Persamaan Linier**\n","\n","Solusi persamaan linier adalah nilai dari variabel yang memenuhi persamaan tersebut. Jika ada lebih dari satu persamaan dalam sistem, solusi harus memenuhi semua persamaan secara bersamaan.\n","\n","\\\n","a. Solusi Unik (Tunggal)\n","\n","- Terdapat satu pasangan nilai variabel yang memenuhi semua persamaan.\n","- Grafisnya, dua garis dalam sistem berpotongan di satu titik.\n","- Syarat: Koefisien variabel harus memiliki determinan ≠ 0 (tidak sejajar atau identik)\n","\n","contoh:\n","\n","\\begin{array}{cc}\n","2x+3y=6 \\\\\n","x-y=1 \\\\\n","\\end{array}\n","\n","\n","solusi: (x,y)=(3,2) (setelah diselesaikan dengan metode substitusi/eliminasi).\n","\n","\\\n","b. Solusi Tak Hingga (Tak Terbatas)\n","\n","- Terdapat banyak solusi yang memenuhi persamaan.\n","- Grafisnya, kedua garis berimpit (identik).\n","- Syarat: Dua persamaan setara, hanya berbeda skala.\n","\n","contoh:\n","\n","\\begin{array}{cc}\n","2x+3y=6 \\\\\n","4x+6y=12 \\\\\n","\\end{array}\n","\n","Solusi: Tak hingga banyaknya, karena persamaan kedua merupakan kelipatan pertama.\n","\n","\\\n","c. Tidak Ada Solusi (Inkosisten)\n","\n","- Tidak ada nilai variabel yang memenuhi kedua persamaan.\n","- Grafisnya, dua garis sejajar dan tidak berpotongan.\n","- Syarat: Koefisien variabel sama, tetapi konstanta berbeda.\n","\n","contoh:\n","\n","\\begin{array}{cc}\n","2x+3y=6 \\\\\n","4x+6y=10 \\\\\n","\\end{array}\n","\n","Solusi: Tidak ada solusi, karena kedua garis sejajar tetapi tidak identik.\n","\n"],"metadata":{"id":"jXVmalOVkZVk"}},{"cell_type":"markdown","source":["# **Metode Eliminasi**\n","\n","Metode Eliminasi adalah teknik dasar dalam menyelesaikan sistem persamaan linier dengan cara menghilangkan (mengeliminasi) satu variabel dengan menjumlahkan atau mengurangkan persamaan setelah mengalikan salah satu atau kedua persamaan agar memiliki koefisien yang sama.\n","\n","\\\n","Langkah-Langkah Metode Eliminasi\n","\n","1️⃣ Samakan koefisien salah satu variabel (jika perlu, kalikan salah satu atau kedua persamaan).\n","\n","2️⃣ Kurangkan atau jumlahkan persamaan untuk menghilangkan variabel tersebut.\n","\n","3️⃣ Selesaikan persamaan satu variabel yang tersisa.\n","\n","4️⃣ Substitusikan nilai yang diperoleh ke persamaan awal untuk menemukan nilai variabel lain.\n","\n","- **Contoh**\n","\n","Diberikan persamaan linier:\n","\n","\\begin{array}{cc}\n","2x+3y=8 \\\\\n","4x-2y=10 \\\\\n","\\end{array}\n","\n","\\\n","**Langkah 1: Samakan koefisien salah satu variabel**\n","\n","- Kita samakan koefisien X dengan mengalikan persamaan pertama dengan 2, sehingga menjadi:\n","\n","\\begin{array}{cc}\n","4x+6y=16 \\\\\n","\\end{array}\n","\n","\\\n","sistem baru menjadi:\n","\n","\\begin{array}{cc}\n","4x+6y=16 \\\\\n","4x-2y= 10 \\\\\n","\\end{array}\n","\n","\\\n","**Langkah 2: Kurangkan kedua persamaan**\n","\n","\\begin{array}{cc}\n","(4x+6y)-(4x-2y) = 10-16 \\\\\n","4x+6y-4x+2y= 6 \\\\\n","8y=6\n","y=\\frac{6}{8}=\\frac{3}{4}\n","\\end{array}\n","\n","\\\n","**Langkah 3: Substitusi nilai y ke persamaan pertama**\n","\n","\\begin{array}{cc}\n","2x+3 (\\frac{3}{4})=8 \\\\\n","2x+ \\frac{9}{4}=8 \\\\\n","2x=8- \\frac{9}{4} \\\\\n","2x= \\frac{32}{4}- \\frac{9}{4}= \\frac{23}{4} \\\\\n","x=\\frac{23}{8}\n","\\end{array}\n","\n","\\\n","jadi:\n","\\begin{array}{cc}\n","X= \\frac{23}{8} \\\\\n","y= \\frac{3}{4}\n","\\end{array}\n","\n"],"metadata":{"id":"06u8jUmZt80j"}},{"cell_type":"markdown","source":["# **Metode Eliminasi Gauss**\n","\n","Metode Eliminasi Gauss adalah teknik penyelesaian sistem persamaan linier menggunakan matriks augmented dan Operasi Baris Elementer `(OBE)` untuk mengubahnya menjadi bentuk eselon baris atas `(upper triangular form)`.\n","\n","\\\n","**Langkah-Langkah Metode Eliminasi**\n","\n","1️⃣ Samakan koefisien salah satu variabel (jika perlu, kalikan salah satu atau kedua persamaan).\n","\n","2️⃣ Kurangkan atau jumlahkan persamaan untuk menghilangkan variabel tersebut.\n","\n","3️⃣ Selesaikan persamaan satu variabel yang tersisa.\n","\n","4️⃣ Substitusikan nilai yang diperoleh ke persamaan awal untuk menemukan nilai variabel lain."],"metadata":{"id":"pcg7qZxlt9jX"}}]}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "jXVmalOVkZVk"
+   },
+   "source": [
+    "# **Solusi Persamaan Linier**\n",
+    "\n",
+    "Solusi persamaan linier adalah nilai dari variabel yang memenuhi persamaan tersebut. Jika ada lebih dari satu persamaan dalam sistem, solusi harus memenuhi semua persamaan secara bersamaan.\n",
+    "\n",
+    "\\\n",
+    "a. Solusi Unik (Tunggal)\n",
+    "\n",
+    "- Terdapat satu pasangan nilai variabel yang memenuhi semua persamaan.\n",
+    "- Grafisnya, dua garis dalam sistem berpotongan di satu titik.\n",
+    "- Syarat: Koefisien variabel harus memiliki determinan ≠ 0 (tidak sejajar atau identik)\n",
+    "\n",
+    "contoh:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "2x+3y=6 \\\\\n",
+    "x-y=1 \\\\\n",
+    "\\end{array}$\n",
+    "\n",
+    "\n",
+    "solusi: (x,y)=(3,2) (setelah diselesaikan dengan metode substitusi/eliminasi).\n",
+    "\n",
+    "\\\n",
+    "b. Solusi Tak Hingga (Tak Terbatas)\n",
+    "\n",
+    "- Terdapat banyak solusi yang memenuhi persamaan.\n",
+    "- Grafisnya, kedua garis berimpit (identik).\n",
+    "- Syarat: Dua persamaan setara, hanya berbeda skala.\n",
+    "\n",
+    "contoh:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "2x+3y=6 \\\\\n",
+    "4x+6y=12 \\\\\n",
+    "\\end{array}$\n",
+    "\n",
+    "Solusi: Tak hingga banyaknya, karena persamaan kedua merupakan kelipatan pertama.\n",
+    "\n",
+    "\\\n",
+    "c. Tidak Ada Solusi (Inkosisten)\n",
+    "\n",
+    "- Tidak ada nilai variabel yang memenuhi kedua persamaan.\n",
+    "- Grafisnya, dua garis sejajar dan tidak berpotongan.\n",
+    "- Syarat: Koefisien variabel sama, tetapi konstanta berbeda.\n",
+    "\n",
+    "contoh:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "2x+3y=6 \\\\\n",
+    "4x+6y=10 \\\\\n",
+    "\\end{array}$\n",
+    "\n",
+    "Solusi: Tidak ada solusi, karena kedua garis sejajar tetapi tidak identik.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "06u8jUmZt80j"
+   },
+   "source": [
+    "# **Metode Eliminasi**\n",
+    "\n",
+    "Metode Eliminasi adalah teknik dasar dalam menyelesaikan sistem persamaan linier dengan cara menghilangkan (mengeliminasi) satu variabel dengan menjumlahkan atau mengurangkan persamaan setelah mengalikan salah satu atau kedua persamaan agar memiliki koefisien yang sama.\n",
+    "\n",
+    "\\\n",
+    "Langkah-Langkah Metode Eliminasi\n",
+    "\n",
+    "1️⃣ Samakan koefisien salah satu variabel (jika perlu, kalikan salah satu atau kedua persamaan).\n",
+    "\n",
+    "2️⃣ Kurangkan atau jumlahkan persamaan untuk menghilangkan variabel tersebut.\n",
+    "\n",
+    "3️⃣ Selesaikan persamaan satu variabel yang tersisa.\n",
+    "\n",
+    "4️⃣ Substitusikan nilai yang diperoleh ke persamaan awal untuk menemukan nilai variabel lain.\n",
+    "\n",
+    "- **Contoh**\n",
+    "\n",
+    "Diberikan persamaan linier:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "2x+3y=8 \\\\\n",
+    "4x-2y=10 \\\\\n",
+    "\\end{array}$\n",
+    "\n",
+    "\\\n",
+    "**Langkah 1: Samakan koefisien salah satu variabel**\n",
+    "\n",
+    "- Kita samakan koefisien X dengan mengalikan persamaan pertama dengan 2, sehingga menjadi:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "4x+6y=16 \\\\\n",
+    "\\end{array}\n",
+    "$\n",
+    "\n",
+    "\\\n",
+    "sistem baru menjadi:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "4x+6y=16 \\\\\n",
+    "4x-2y= 10 \\\\\n",
+    "\\end{array}\n",
+    "$\n",
+    "\n",
+    "\\\n",
+    "**Langkah 2: Kurangkan kedua persamaan**\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "(4x+6y)-(4x-2y) = 10-16 \\\\\n",
+    "4x+6y-4x+2y= 6 \\\\\n",
+    "8y=6\n",
+    "y=\\frac{6}{8}=\\frac{3}{4}\n",
+    "\\end{array}$\n",
+    "\n",
+    "\\\n",
+    "**Langkah 3: Substitusi nilai y ke persamaan pertama**\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "2x+3 (\\frac{3}{4})=8 \\\\\n",
+    "2x+ \\frac{9}{4}=8 \\\\\n",
+    "2x=8- \\frac{9}{4} \\\\\n",
+    "2x= \\frac{32}{4}- \\frac{9}{4}= \\frac{23}{4} \\\\\n",
+    "x=\\frac{23}{8}\n",
+    "\\end{array}$\n",
+    "\n",
+    "\\\n",
+    "jadi:\n",
+    "\n",
+    "$\n",
+    "\\begin{array}{cc}\n",
+    "X= \\frac{23}{8} \\\\\n",
+    "y= \\frac{3}{4}\n",
+    "\\end{array}$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "pcg7qZxlt9jX"
+   },
+   "source": [
+    "# **Metode Eliminasi Gauss**\n",
+    "\n",
+    "Metode Eliminasi Gauss adalah teknik penyelesaian sistem persamaan linier menggunakan matriks augmented dan Operasi Baris Elementer `(OBE)` untuk mengubahnya menjadi bentuk eselon baris atas `(upper triangular form)`.\n",
+    "\n",
+    "\\\n",
+    "**Langkah-Langkah Metode Eliminasi**\n",
+    "\n",
+    "1️⃣ Samakan koefisien salah satu variabel (jika perlu, kalikan salah satu atau kedua persamaan).\n",
+    "\n",
+    "2️⃣ Kurangkan atau jumlahkan persamaan untuk menghilangkan variabel tersebut.\n",
+    "\n",
+    "3️⃣ Selesaikan persamaan satu variabel yang tersisa.\n",
+    "\n",
+    "4️⃣ Substitusikan nilai yang diperoleh ke persamaan awal untuk menemukan nilai variabel lain."
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPHOUu1UaV5HdLiXaeDduEu",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
