--- a/_sources/matriks.ipynb
+++ b/_sources/matriks.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "TA4lmByFyxKo"
+      },
       "source": [
         "# Matriks\n",
         "## **Definisi Matriks**\n",
@@ -29,13 +18,30 @@
         "\n",
         "#### Konsep Penjumlahan Matriks\n",
         "Berikut contoh penjumlahan matriks\n"
-      ],
-      "metadata": {
-        "id": "TA4lmByFyxKo"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PjSnt4FUNeWW",
+        "outputId": "c4c32226-606b-4acd-e3f0-fcae5fc2b6e9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Penjumlahan Matriks:\n",
+            "Matrix([[7, 2, 9]])  +  Matrix([[1, -3, 4]])  =  Matrix([[8, -1, 13]])\n",
+            "Matrix([[3, 5, 1]])  +  Matrix([[6, 2, -5]])  =  Matrix([[9, 7, -4]])\n",
+            "Matrix([[4, 8, 6]])  +  Matrix([[0, 7, 3]])  =  Matrix([[4, 15, 9]])\n"
+          ]
+        }
+      ],
       "source": [
         "import sympy as sy\n",
         "\n",
@@ -54,42 +60,42 @@
         "        print(m1.row(i), \" + \", m2.row(i), \" = \", result.row(i))\n",
         "\n",
         "display_side_by_side(a_sy, b_sy, sum_sympy)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PjSnt4FUNeWW",
-        "outputId": "c4c32226-606b-4acd-e3f0-fcae5fc2b6e9"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Penjumlahan Matriks:\n",
-            "Matrix([[7, 2, 9]])  +  Matrix([[1, -3, 4]])  =  Matrix([[8, -1, 13]])\n",
-            "Matrix([[3, 5, 1]])  +  Matrix([[6, 2, -5]])  =  Matrix([[9, 7, -4]])\n",
-            "Matrix([[4, 8, 6]])  +  Matrix([[0, 7, 3]])  =  Matrix([[4, 15, 9]])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "-OPTcD67QOxD"
+      },
       "source": [
         "### Pengurangan Matriks\n",
         "Syarat pengurangan matriks pun sama dengan penjumlahan, yaitu kedua matriks harus memiliki ordo yang sama sehingga bisa dioperasikan.\n",
         "#### Konsep Pengurangan Matriks\n",
         "Berikut contoh pengurangan matriks"
-      ],
-      "metadata": {
-        "id": "-OPTcD67QOxD"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XCIY-QEeQPFf",
+        "outputId": "eb2501fd-3e7c-4b21-b97d-74ff923cdd44"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pengurangan Matriks:\n",
+            "Matrix([[5, 9, 3]])  -  Matrix([[1, -2, 7]])  =  Matrix([[4, 11, -4]])\n",
+            "Matrix([[7, 2, 6]])  -  Matrix([[3, 5, -4]])  =  Matrix([[4, -3, 10]])\n",
+            "Matrix([[4, 8, 1]])  -  Matrix([[6, 0, 2]])  =  Matrix([[-2, 8, -1]])\n"
+          ]
+        }
+      ],
       "source": [
         "import sympy as sy\n",
         "\n",
@@ -108,30 +114,13 @@
         "        print(m1.row(i), \" - \", m2.row(i), \" = \", result.row(i))\n",
         "\n",
         "display_side_by_side(a_sy, b_sy, diff_sympy)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XCIY-QEeQPFf",
-        "outputId": "eb2501fd-3e7c-4b21-b97d-74ff923cdd44"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Pengurangan Matriks:\n",
-            "Matrix([[5, 9, 3]])  -  Matrix([[1, -2, 7]])  =  Matrix([[4, 11, -4]])\n",
-            "Matrix([[7, 2, 6]])  -  Matrix([[3, 5, -4]])  =  Matrix([[4, -3, 10]])\n",
-            "Matrix([[4, 8, 1]])  -  Matrix([[6, 0, 2]])  =  Matrix([[-2, 8, -1]])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KVMnvqa6F52v"
+      },
       "source": [
         "### Perkalian Matriks\n",
         "\n",
@@ -144,13 +133,30 @@
         "\n",
         "#### Konsep Perkalian Matriks dengan Matriks\n",
         "Berikut contoh perkalian matriks dengan matriks"
-      ],
-      "metadata": {
-        "id": "KVMnvqa6F52v"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bme09TIwF6vo",
+        "outputId": "a75772fc-0f7b-4c92-8b5f-ef1142404fcb"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Perkalian Matriks dengan Matriks:\n",
+            "Matrix([[3, 7, 2]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[55, 31, 14]])\n",
+            "Matrix([[5, 1, 6]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[17, 25, 42]])\n",
+            "Matrix([[4, 8, 9]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[64, 74, 39]])\n"
+          ]
+        }
+      ],
       "source": [
         "import sympy as sy\n",
         "\n",
@@ -169,30 +175,13 @@
         "        print(m1.row(i), \" * \", m2, \" = \", result.row(i))\n",
         "\n",
         "display_side_by_side(a_sy, b_sy, prod_sympy)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bme09TIwF6vo",
-        "outputId": "a75772fc-0f7b-4c92-8b5f-ef1142404fcb"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Perkalian Matriks dengan Matriks:\n",
-            "Matrix([[3, 7, 2]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[55, 31, 14]])\n",
-            "Matrix([[5, 1, 6]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[17, 25, 42]])\n",
-            "Matrix([[4, 8, 9]])  *  Matrix([[2, -3, 5], [7, 4, -1], [0, 6, 3]])  =  Matrix([[64, 74, 39]])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "gG7zObEJzTH2"
+      },
       "source": [
         "**Perkalian Matriks dengan Skalar**\n",
         "\n",
@@ -200,13 +189,30 @@
         "\n",
         "#### Konsep Perkalian Matriks dengan Skalar\n",
         "Berikut contoh perkalian matriks dengan skalar"
-      ],
-      "metadata": {
-        "id": "gG7zObEJzTH2"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VwiyOr7ezTXU",
+        "outputId": "e4b01a54-979a-401d-b2e2-35abdd8787dd"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Perkalian Matriks dengan Skalar:\n",
+            "4 * Matrix([[5, 3, 7]]) = Matrix([[20, 12, 28]])\n",
+            "4 * Matrix([[2, 6, 9]]) = Matrix([[8, 24, 36]])\n",
+            "4 * Matrix([[4, 8, 1]]) = Matrix([[16, 32, 4]])\n"
+          ]
+        }
+      ],
       "source": [
         "import sympy as sy\n",
         "\n",
@@ -227,27 +233,213 @@
         "        print(f\"{scalar} * {matrix.row(i)} = {result.row(i)}\")\n",
         "\n",
         "display_scalar_multiplication(scalar, a_sy, prod_sympy)"
-      ],
-      "metadata": {
-        "id": "VwiyOr7ezTXU",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e4b01a54-979a-401d-b2e2-35abdd8787dd"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Perkalian Matriks dengan Skalar:\n",
-            "4 * Matrix([[5, 3, 7]]) = Matrix([[20, 12, 28]])\n",
-            "4 * Matrix([[2, 6, 9]]) = Matrix([[8, 24, 36]])\n",
-            "4 * Matrix([[4, 8, 1]]) = Matrix([[16, 32, 4]])\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Penyelesaian persamaan menggunakan invers matrik\n",
+        "\n",
+        "Kita diberikan sistem persamaan linear:\n",
+        "\n",
+        "$\n",
+        "\\begin{aligned}\n",
+        "    -7x_1 - 6x_2 - 12x_3 &= -33 \\\\\n",
+        "    5x_1 + 5x_2 + 7x_3 &= 24 \\\\\n",
+        "    x_1 + 4x_3 &= 5\n",
+        "\\end{aligned}\n",
+        "$\n",
+        "\n",
+        "#### **1. Bentuk Matriks**\n",
+        "Sistem persamaan di atas dapat dituliskan dalam bentuk matriks:\n",
+        "\n",
+        "$\n",
+        "A \\mathbf{x} = \\mathbf{b}\n",
+        "$\n",
+        "\n",
+        "dengan:\n",
+        "\n",
+        "$\n",
+        "A =\n",
+        "\\begin{bmatrix}\n",
+        "-7 & -6 & -12 \\\\\n",
+        "5 & 5 & 7 \\\\\n",
+        "1 & 0 & 4\n",
+        "\\end{bmatrix},\n",
+        "\\quad\n",
+        "\\mathbf{x} =\n",
+        "\\begin{bmatrix}\n",
+        "x_1 \\\\ x_2 \\\\ x_3\n",
+        "\\end{bmatrix},\n",
+        "\\quad\n",
+        "\\mathbf{b} =\n",
+        "\\begin{bmatrix}\n",
+        "-33 \\\\ 24 \\\\ 5\n",
+        "\\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Penyelesaian sistem menggunakan invers matriks diberikan oleh:\n",
+        "\n",
+        "$\n",
+        "\\mathbf{x} = A^{-1} \\mathbf{b}\n",
+        "$\n",
+        "\n",
+        "Kita akan mencari $ A^{-1} $ menggunakan operasi baris elementer.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### **2. Menentukan $ A^{-1} $ Menggunakan Operasi Baris Elementer**\n",
+        "Kita mulai dengan matriks augmented:\n",
+        "\n",
+        "$\n",
+        "\\left[ A \\,|\\, I \\right] =\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "-7 & -6 & -12 & 1 & 0 & 0 \\\\\n",
+        "5 & 5 & 7 & 0 & 1 & 0 \\\\\n",
+        "1 & 0 & 4 & 0 & 0 & 1\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 1: Ubah elemen (1,1) menjadi 1**\n",
+        "Kita bagi baris pertama dengan $ -7 $:\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & \\frac{6}{7} & \\frac{12}{7} & -\\frac{1}{7} & 0 & 0 \\\\\n",
+        "5 & 5 & 7 & 0 & 1 & 0 \\\\\n",
+        "1 & 0 & 4 & 0 & 0 & 1\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 2: Nulifikasi elemen (2,1) dan (3,1)**  \n",
+        "Baris kedua: $ R_2 \\leftarrow R_2 - 5R_1 $  \n",
+        "Baris ketiga: $ R_3 \\leftarrow R_3 - R_1 $\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & \\frac{6}{7} & \\frac{12}{7} & -\\frac{1}{7} & 0 & 0 \\\\\n",
+        "0 & \\frac{5}{7} & \\frac{1}{7} & \\frac{5}{7} & 1 & 0 \\\\\n",
+        "0 & -\\frac{6}{7} & \\frac{16}{7} & \\frac{1}{7} & 0 & 1\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 3: Ubah elemen (2,2) menjadi 1**  \n",
+        "Kita kalikan baris kedua dengan $ \\frac{7}{5} $:\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & \\frac{6}{7} & \\frac{12}{7} & -\\frac{1}{7} & 0 & 0 \\\\\n",
+        "0 & 1 & \\frac{1}{5} & \\frac{1}{5} & \\frac{7}{5} & 0 \\\\\n",
+        "0 & -\\frac{6}{7} & \\frac{16}{7} & \\frac{1}{7} & 0 & 1\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 4: Nulifikasi elemen (1,2) dan (3,2)**  \n",
+        "Baris pertama: $ R_1 \\leftarrow R_1 - \\frac{6}{7} R_2 $  \n",
+        "Baris ketiga: $ R_3 \\leftarrow R_3 + \\frac{6}{7} R_2 $\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & 0 & \\frac{10}{7} & -\\frac{5}{21} & -\\frac{6}{5} & 0 \\\\\n",
+        "0 & 1 & \\frac{1}{5} & \\frac{1}{5} & \\frac{7}{5} & 0 \\\\\n",
+        "0 & 0 & \\frac{22}{7} & \\frac{11}{35} & \\frac{42}{35} & 1\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 5: Ubah elemen (3,3) menjadi 1**  \n",
+        "Kita kalikan baris ketiga dengan $ \\frac{7}{22} $:\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & 0 & \\frac{10}{7} & -\\frac{5}{21} & -\\frac{6}{5} & 0 \\\\\n",
+        "0 & 1 & \\frac{1}{5} & \\frac{1}{5} & \\frac{7}{5} & 0 \\\\\n",
+        "0 & 0 & 1 & \\frac{1}{10} & \\frac{21}{22} & \\frac{7}{22}\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "**Langkah 6: Nulifikasi elemen (1,3) dan (2,3)**  \n",
+        "Baris pertama: $ R_1 \\leftarrow R_1 - \\frac{10}{7} R_3 $  \n",
+        "Baris kedua: $ R_2 \\leftarrow R_2 - \\frac{1}{5} R_3 $\n",
+        "\n",
+        "$\n",
+        "\\left[\n",
+        "\\begin{array}{ccc|ccc}\n",
+        "1 & 0 & 0 & -\\frac{8}{21} & -\\frac{9}{5} & -\\frac{10}{22} \\\\\n",
+        "0 & 1 & 0 & \\frac{1}{5} - \\frac{1}{50} & \\frac{7}{5} - \\frac{21}{110} & -\\frac{7}{110} \\\\\n",
+        "0 & 0 & 1 & \\frac{1}{10} & \\frac{21}{22} & \\frac{7}{22}\n",
+        "\\end{array}\n",
+        "\\right]\n",
+        "$\n",
+        "\n",
+        "Setelah disederhanakan, kita dapatkan invers matriks $ A^{-1} $:\n",
+        "\n",
+        "$\n",
+        "A^{-1} =\n",
+        "\\begin{bmatrix}\n",
+        "-\\frac{8}{21} & -\\frac{9}{5} & -\\frac{5}{11} \\\\\n",
+        "\\frac{2}{7} & \\frac{37}{35} & -\\frac{7}{55} \\\\\n",
+        "\\frac{1}{10} & \\frac{21}{22} & \\frac{7}{22}\n",
+        "\\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### **3. Menghitung $ \\mathbf{x} = A^{-1} \\mathbf{b} $**\n",
+        "\n",
+        "$\n",
+        "\\mathbf{x} =\n",
+        "\\begin{bmatrix}\n",
+        "-\\frac{8}{21} & -\\frac{9}{5} & -\\frac{5}{11} \\\\\n",
+        "\\frac{2}{7} & \\frac{37}{35} & -\\frac{7}{55} \\\\\n",
+        "\\frac{1}{10} & \\frac{21}{22} & \\frac{7}{22}\n",
+        "\\end{bmatrix}\n",
+        "\\begin{bmatrix}\n",
+        "-33 \\\\ 24 \\\\ 5\n",
+        "\\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Setelah dihitung, diperoleh:\n",
+        "\n",
+        "$\n",
+        "\\mathbf{x} =\n",
+        "\\begin{bmatrix}\n",
+        "1 \\\\ 2 \\\\ 1\n",
+        "\\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Jadi, solusi dari sistem persamaan adalah:\n",
+        "\n",
+        "$\n",
+        "x_1 = 1, \\quad x_2 = 2, \\quad x_3 = 1\n",
+        "$"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
