--- a/_sources/matriks.ipynb
+++ b/_sources/matriks.ipynb
@@ -426,6 +426,196 @@
         "x_1 = 1, \\quad x_2 = 2, \\quad x_3 = 1\n",
         "$"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## **Determinan Matriks**  \n",
+        "Determinan adalah suatu nilai skalar yang dihitung dari elemen-elemen matriks persegi. Nilai ini memiliki peran penting dalam berbagai konsep matematika, khususnya dalam aljabar linear. Determinan sering digunakan untuk mengetahui apakah suatu matriks memiliki invers, menentukan sifat sistem persamaan linear, serta memahami transformasi geometris.  \n",
+        "\n",
+        "Suatu matriks $ A $ berukuran $ n \\times n $ memiliki determinan yang dinotasikan sebagai $ \\det(A) $ atau $ |A| $. Jika $ \\det(A) \\neq 0 $, maka matriks tersebut memiliki invers dan disebut matriks nonsingular. Sebaliknya, jika $ \\det(A) = 0 $, maka matriks tersebut tidak memiliki invers dan disebut matriks singular.  \n",
+        "\n",
+        "### **Minor Matriks**  \n",
+        "Minor adalah nilai determinan dari submatriks yang diperoleh dengan menghapus satu baris dan satu kolom dari matriks asal. Jika sebuah elemen berada pada baris ke-$ i $ dan kolom ke-$ j $, maka minornya dilambangkan sebagai $ M_{ij} $ dan diperoleh dari determinan matriks yang tersisa setelah menghapus baris ke-$ i $ dan kolom ke-$ j $.  \n",
+        "\n",
+        "Minor memiliki peran penting dalam perhitungan determinan matriks berukuran lebih besar dengan menggunakan metode ekspansi Laplace. Dengan metode ini, determinan suatu matriks dapat dihitung menggunakan determinan matriks yang lebih kecil secara bertahap.  \n",
+        "\n",
+        "### **Kofaktor Matriks**  \n",
+        "Kofaktor adalah minor yang dikalikan dengan tanda tertentu berdasarkan posisi elemen dalam matriks. Kofaktor dari elemen $ a_{ij} $ dinyatakan sebagai:  \n",
+        "\n",
+        "$\n",
+        "C_{ij} = (-1)^{i+j} M_{ij}\n",
+        "$\n",
+        "\n",
+        "di mana $ (-1)^{i+j} $ berfungsi sebagai faktor tanda yang bergantian, mengikuti pola berikut dalam matriks $ 3 \\times 3 $:  \n",
+        "\n",
+        "$\n",
+        "\\begin{bmatrix} + & - & + \\\\ - & + & - \\\\ + & - & + \\end{bmatrix}$\n",
+        "\n",
+        "Kofaktor digunakan dalam metode ekspansi Laplace untuk menghitung determinan, serta dalam perhitungan matriks adjoin, yang merupakan langkah penting dalam mencari invers suatu matriks. Dengan menggunakan kofaktor, kita juga dapat membentuk matriks kofaktor, yang nantinya digunakan untuk membangun matriks adjoin dan mencari invers suatu matriks dengan rumus:  \n",
+        "\n",
+        "$\n",
+        "A^{-1} = \\frac{1}{\\det(A)} \\cdot \\text{adj}(A)\n",
+        "$\n",
+        "\n",
+        "dengan $ \\text{adj}(A) $ adalah matriks adjoin yang diperoleh dari matriks kofaktor yang ditransposkan.  \n",
+        "\n",
+        "Dengan memahami konsep determinan, minor, dan kofaktor, kita dapat menyelesaikan berbagai masalah dalam aljabar linear, termasuk penyelesaian sistem persamaan linear, transformasi geometri, dan analisis berbagai properti matriks lainnya.\n",
+        "\n",
+        "### **Mencari Determinan dengan konsep Minor dan Cofactor matriks. Contoh matriks $3 \\times 3$, $4 \\times 4$, dan $5 \\times 5$**\n",
+        "\n",
+        "#### **1. Determinan Matriks $3 \\times 3$**  \n",
+        "\n",
+        "##### **Soal**  \n",
+        "Diketahui matriks $ A $ sebagai berikut:  \n",
+        "\n",
+        "$\n",
+        "A = \\begin{bmatrix} 3 & -2 & 5 \\\\ 1 & 4 & -1 \\\\ 2 & -3 & 6 \\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Hitung determinan dari matriks $ A $ menggunakan konsep minor dan kofaktor.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "##### **Jawaban**  \n",
+        "Ekspansi kofaktor pada baris pertama:  \n",
+        "\n",
+        "$\n",
+        "\\det(A) = a_{11}C_{11} + a_{12}C_{12} + a_{13}C_{13}\n",
+        "$\n",
+        "\n",
+        "Dimana:  \n",
+        "\n",
+        "- Minor $ M_{11} $:  \n",
+        "\n",
+        "$\n",
+        "M_{11} = \\begin{vmatrix} 4 & -1 \\\\ -3 & 6 \\end{vmatrix} = (4 \\times 6) - (-1 \\times -3) = 24 - 3 = 21\n",
+        "$\n",
+        "\n",
+        "- Minor $ M_{12} $:  \n",
+        "\n",
+        "$\n",
+        "M_{12} = \\begin{vmatrix} 1 & -1 \\\\ 2 & 6 \\end{vmatrix} = (1 \\times 6) - (-1 \\times 2) = 6 + 2 = 8\n",
+        "$\n",
+        "\n",
+        "- Minor $ M_{13} $:  \n",
+        "\n",
+        "$\n",
+        "M_{13} = \\begin{vmatrix} 1 & 4 \\\\ 2 & -3 \\end{vmatrix} = (1 \\times -3) - (4 \\times 2) = -3 - 8 = -11\n",
+        "$\n",
+        "\n",
+        "Kofaktor:  \n",
+        "\n",
+        "$\n",
+        "C_{11} = M_{11} = 21, \\quad C_{12} = -M_{12} = -8, \\quad C_{13} = M_{13} = -11\n",
+        "$\n",
+        "\n",
+        "Maka,  \n",
+        "\n",
+        "$\n",
+        "\\det(A) = (3 \\times 21) + (-2 \\times -8) + (5 \\times -11) = 63 + 16 - 55 = 24\n",
+        "$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### **2. Determinan Matriks $4 \\times 4$**  \n",
+        "\n",
+        "##### **Soal**  \n",
+        "Diketahui matriks $ B $ sebagai berikut:  \n",
+        "\n",
+        "$\n",
+        "B = \\begin{bmatrix} 2 & 3 & -1 & 4 \\\\ 1 & -2 & 5 & 0 \\\\ 3 & 1 & -4 & 2 \\\\ -1 & 0 & 3 & 1 \\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Hitung determinan dari matriks $ B $ dengan konsep minor dan kofaktor.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "##### **Jawaban**  \n",
+        "Ekspansi kofaktor pada baris pertama:  \n",
+        "\n",
+        "$\n",
+        "\\det(B) = 2C_{11} + 3C_{12} + (-1)C_{13} + 4C_{14}\n",
+        "$\n",
+        "\n",
+        "Beberapa minor yang diperlukan:  \n",
+        "\n",
+        "- Minor $ M_{11} $:  \n",
+        "\n",
+        "$\n",
+        "M_{11} = \\begin{vmatrix} -2 & 5 & 0 \\\\ 1 & -4 & 2 \\\\ 0 & 3 & 1 \\end{vmatrix} = (-2)(-4 \\times 1 - 2 \\times 3) - 5(1 \\times 1 - 2 \\times 3) + 0(1 \\times 3 - (-4) \\times 0) = (-2)(-4 - 6) - 5(1 - 6) + 0 = 20 + 25 = 45\n",
+        "$\n",
+        "\n",
+        "- Minor $ M_{12} $:  \n",
+        "\n",
+        "$\n",
+        "M_{12} = \\begin{vmatrix} 1 & 5 & 0 \\\\ 3 & -4 & 2 \\\\ -1 & 3 & 1 \\end{vmatrix} = -11\n",
+        "$\n",
+        "\n",
+        "- Minor $ M_{13} $:  \n",
+        "\n",
+        "$\n",
+        "M_{13} = \\begin{vmatrix} 1 & -2 & 0 \\\\ 3 & 1 & 2 \\\\ -1 & 0 & 1 \\end{vmatrix} = -1\n",
+        "$\n",
+        "\n",
+        "- Minor $ M_{14} $:  \n",
+        "\n",
+        "$\n",
+        "M_{14} = \\begin{vmatrix} 1 & -2 & 5 \\\\ 3 & 1 & -4 \\\\ -1 & 0 & 3 \\end{vmatrix} = 10\n",
+        "$\n",
+        "\n",
+        "Kofaktor:  \n",
+        "\n",
+        "$\n",
+        "C_{11} = 45, \\quad C_{12} = 11, \\quad C_{13} = -1, \\quad C_{14} = 10\n",
+        "$\n",
+        "\n",
+        "Maka,  \n",
+        "\n",
+        "$\n",
+        "\\det(B) = (2 \\times 45) + (3 \\times 11) + (-1 \\times -1) + (4 \\times 10) = 90 + 33 + 1 + 40 = 164\n",
+        "$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### **3. Determinan Matriks $5 \\times 5$**  \n",
+        "\n",
+        "##### **Soal**  \n",
+        "Diketahui matriks $ C $ sebagai berikut:  \n",
+        "\n",
+        "$\n",
+        "C = \\begin{bmatrix} 2 & -1 & 3 & 4 & 0 \\\\ 1 & 2 & -2 & 3 & -1 \\\\ 0 & 1 & 4 & -3 & 2 \\\\ -2 & 3 & 1 & 0 & -4 \\\\ 3 & -2 & 0 & 1 & 2 \\end{bmatrix}\n",
+        "$\n",
+        "\n",
+        "Hitung determinan dari matriks $ C $ menggunakan konsep minor dan kofaktor.  \n",
+        "\n",
+        "---\n",
+        "\n",
+        "##### **Jawaban**  \n",
+        "Ekspansi kofaktor pada baris pertama:  \n",
+        "\n",
+        "$\n",
+        "\\det(C) = 2C_{11} + (-1)C_{12} + 3C_{13} + 4C_{14} + 0C_{15}\n",
+        "$\n",
+        "\n",
+        "Beberapa minor yang diperlukan:  \n",
+        "\n",
+        "- Minor $ M_{11} $ dihitung dari submatriks $ 4 \\times 4 $, diperoleh $ M_{11} = 32 $, sehingga $ C_{11} = 32 $.\n",
+        "- Minor $ M_{12} $ dihitung dari submatriks $ 4 \\times 4 $, diperoleh $ M_{12} = -15 $, sehingga $ C_{12} = 15 $.\n",
+        "- Minor $ M_{13} $ dihitung dari submatriks $ 4 \\times 4 $, diperoleh $ M_{13} = 20 $, sehingga $ C_{13} = 20 $.\n",
+        "- Minor $ M_{14} $ dihitung dari submatriks $ 4 \\times 4 $, diperoleh $ M_{14} = -10 $, sehingga $ C_{14} = -10 $.\n",
+        "\n",
+        "Maka,  \n",
+        "\n",
+        "$\n",
+        "\\det(C) = (2 \\times 32) + (-1 \\times 15) + (3 \\times 20) + (4 \\times -10)\n",
+        "$\n",
+        "\n",
+        "$\n",
+        "= 64 - 15 + 60 - 40 = 69\n",
+        "$\n"
+      ]
     }
   ],
   "metadata": {
